[package]
name = "gst-gllcms-rs"
version = "0.1.0"
authors = ["Marijn Suijten <MarijnS95@gmail.com>"]
repository = "https://github.com/MarijnS95/gst-gllcms-rs"
# license = "MIT/Apache-2.0"
edition = "2018"
description = "Transform GL textures using ICC profiles"

[dependencies]
gstreamer = { path = "../gstreamer-rs/gstreamer" }
gstreamer-base = { path = "../gstreamer-rs/gstreamer-base" }
# Need 1.16 for GLShader::string_get_highest_precision
gstreamer-gl = { path = "../gstreamer-rs/gstreamer-gl", features = ["v1_16"] }
lcms2 = "5.3"
once_cell = "1.4"

[lib]
name = "gstgllcms"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = {  git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }
