[package]
name = "gst-gllcms-rs"
version = "0.1.0"
authors = ["Marijn Suijten <MarijnS95@gmail.com>"]
repository = "https://github.com/MarijnS95/gst-gllcms-rs"
# license = "MIT/Apache-2.0"
edition = "2018"
description = "Transform GL textures using ICC profiles"

[dependencies]
gl = { package = "gfx_gl", version = "0.6" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/MarijnS95/gstreamer-rs.git", branch = "experiments" }
gst_base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/MarijnS95/gstreamer-rs.git", branch = "experiments" }
# Need 1.16 for GLShader::string_get_highest_precision
gst_gl = { package = "gstreamer-gl", git = "https://gitlab.freedesktop.org/MarijnS95/gstreamer-rs.git", branch = "experiments", features = ["v1_16"] }
lcms2 = "5.4"
once_cell = "1.4"

[lib]
name = "gstgllcms"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = {  git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }
