[package]
name = "gst-gllcms-rs"
version = "0.1.0"
authors = ["Marijn Suijten <MarijnS95@gmail.com>"]
repository = "https://github.com/MarijnS95/gst-gllcms-rs"
# license = "MIT/Apache-2.0"
edition = "2018"
description = "Transform GL textures using ICC profiles"

[dependencies]
gl = { package = "gfx_gl", version = "0.6" }
gst_gl = { package = "gstreamer-gl", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs.git", branch = "master" }
lcms2 = "5.4"
once_cell = "1.5"

[lib]
name = "gstgllcms"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = {  git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }
